# makm

./: .gitignore  Makefile  README.md  profile.state  pyproject.toml
.devcontainer/: devcontainer.json
data/config/: preferences.yaml
data/config/keyboards/: 3-4h-2t.yaml
data/corpus/code/c#/: config.yaml
data/corpus/code/c++/: config.yaml
data/corpus/code/go/: config.yaml
data/corpus/code/java/: config.yaml
data/corpus/code/javascript/: config.yaml
data/corpus/code/php/: config.yaml
data/corpus/code/python/: config.yaml
data/corpus/code/shell/: config.yaml
data/corpus/code/typescript/: config.yaml
data/corpus/i18n/: SOURCES.md
src/myapp/: config_reader.py  corpus_processor.py  keyboard.py  layout_calculator.py  layout_generator.py  main.py
tests/qa/: test_coverage.py
tests/src/: conftest.py
tests/src/app/: test__version.py  test_main.py
tools/qa/: pylintrc.src.ini
tools/qa/coverage/: report.ref.txt  update.sh
tools/releasing/: build.sh  upload.sh  version.py
tools/tooling/container/: Dockerfile
tools/tooling/container/builder/: packages.txt
